my_flask_app/ingress/frontend-ingress-01.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    cert-manager.io/cluster-issuer: 'letsencrypt-cluter-issuer'
    nginx.ingress.kubernetes.io/proxy-body-size: '200m'
spec:
  tls:
  - hosts:
    - frontend.pandev.engineer
    secretName: nginx-ingress-tls
  rules:
  - host: frontend.pandev.engineer
    http:
      paths:
      - path: /test
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80

      - path: /songs
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80

      - path: /movies
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
