my_flask_app/ingress/frontend-ingress-02.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    cert-manager.io/cluster-issuer: 'letsencrypt-cluter-issuer'
    nginx.ingress.kubernetes.io/proxy-body-size: '200m'
spec:
  tls:
  - hosts:
    - frontend.pandev.engineer
    - web.pandev.engineer
    - nginx.pandev.engineer
    secretName: nginx-ingress-tls
  rules:
  - host: frontend.pandev.engineer
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
  - host: web.pandev.engineer
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-app
            port:
              number: 80   
  - host: nginx.pandev.engineer
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-app
            port:
              number: 80
